# rust-fribidi

./: Cargo.toml  LICENSE  README.md
fribidi-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
fribidi-sys/examples/: main.rs
fribidi-sys/src/: fribidi_bindings.rs  lib.rs
src/: bracket.rs  char.rs  flag.rs  fribidi.rs  level.rs  lib.rs  paragraph.rs
