[package]
name = "fribidi"
description = "fribidi bindings for Rust"
repository = "https://github.com/baronleonardo/rust-fribidi"
# documentation = "https://rust-sdl2.github.io/rust-fribidi/rust-fribidi"
license = "MIT"
authors = ["Mohamed A. Elmeligy <mohamed.a.elmeligy@zohomail.com>"]
keywords = ["fribidi", "text", "font", "api", "arabic", "RTL"]
categories = ["rendering","api-bindings"]
readme = "README.md"
resolver = "2"
version = "0.1.0"
edition = "2021"

[build-dependencies]
pkg-config = { version = "^0.3", optional = true }

[dependencies.fribidi-sys]
path = "fribidi-sys"
version = "^0.1"

[dependencies]
widestring = "^1.0"

[lib]
name = "fribidi"
path = "src/lib.rs"

[features]
default = ["pkg-config"]
static = ["fribidi-sys/static"]