[package]
name = "fribidi"
description = "fribidi bindings for Rust"
repository = "https://github.com/rust-fribidi/rust-fribidi"
documentation = "https://docs.rs/fribidi/latest/fribidi"
license = "MIT"
authors = ["Mohamed A. Elmeligy <mohamed.a.elmeligy@protonmail.com>"]
keywords = ["fribidi", "text", "font", "arabic", "RTL"]
categories = ["rendering","api-bindings"]
readme = "README.md"
resolver = "2"
version = "0.1.0"
edition = "2021"

[build-dependencies]
pkg-config = { version = "^0.3", optional = true }

[dependencies.fribidi-sys]
path = "fribidi-sys"
version = "^0.1"

[dependencies]
widestring = "^1.0"

[lib]
name = "fribidi"
path = "src/lib.rs"

[features]
default = ["pkg-config"]
static = ["fribidi-sys/static"]