[package]
name = "fribidi-sys"
description = "Raw fribidi bindings for Rust"
repository = "https://github.com/baronleonardo/fribidi"
version = "0.1.0"
authors = ["Mohamed A. Elmeligy <mohamed.a.elmeligy@protonmail.com>"]
keywords = ["fribidi", "arabic", "RTL", "ffi"]
categories = ["rendering","external-ffi-bindings"]
license = "MIT"
links = "fribidi"
build = "build.rs"

[build-dependencies]
bindgen = "^0.53"
pkg-config = { version = "^0.3", optional = true }

[dependencies]

[lib]
name = "fribidi_sys"
path = "src/lib.rs"

[features]
default = ["pkg-config"]
static = []